force-app/main/default/objects/Customer_Notification_Config__mdt/Customer_Notification_Config__mdt.object-meta.xml
<CustomObject>
    <label>Customer Notification Config</label>
    <pluralLabel>Customer Notifications Config</pluralLabel>
</CustomObject>