force-app/main/default/objects/Customer_Notification_Config__mdt/fields/CC_recipient_CSV__c.field-meta.xml
<CustomField>
    <fullName>CC_recipient_CSV__c</fullName>
    <label>CC recipient CSV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>