force-app/main/default/objects/Customer_Notification_Config__mdt/fields/external_templateID__c.field-meta.xml
<CustomField>
    <fullName>external_templateID__c</fullName>
    <label>external templateID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>