force-app/main/default/objects/Customer_Notification_Config__mdt/fields/Primary_Object__c.field-meta.xml
<CustomField>
    <fullName>Primary_Object__c</fullName>
    <label>Primary Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>