force-app/main/default/objects/Customer_Notification_Config__mdt/fields/SMS_Merge_Fields_CSV__c.field-meta.xml
<CustomField>
    <fullName>SMS_Merge_Fields_CSV__c</fullName>
    <label>SMS Merge Fields CSV</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>