force-app/main/default/objects/Customer_Notification_Config__mdt/fields/SMS_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>SMS_Template_Name__c</fullName>
    <label>SMS Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>