force-app/main/default/objects/Customer_Notification_Config__mdt/fields/To_recipient_CSV__c.field-meta.xml
<CustomField>
    <fullName>To_recipient_CSV__c</fullName>
    <label>To recipient CSV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>