force-app/main/default/objects/Customer_Notification_Config__mdt/fields/Whatsapp_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Whatsapp_Template_Name__c</fullName>
    <label>Whatsapp Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>