force-app/main/default/objects/Customer_Notification_Config__mdt/listViews/RNWL.listView-meta.xml
<ListView>
    <fullName>RNWL</fullName>
    <columns>MasterLabel</columns>
    <columns>Email_Template_Name__c</columns>
    <columns>Active__c</columns>
    <columns>Primary_Object__c</columns>
    <columns>DeveloperName</columns>
    <columns>SMS_Entity_Id__c</columns>
    <columns>SMS_Sender_Id__c</columns>
    <columns>SMS_Template_Name__c</columns>
    <columns>external_templateID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>contains</operation>
        <value>RNWL</value>
    </filters>
    <label>RNWL</label>
    <language>en_US</language>
</ListView>